index.html 하단 수정
hello world 추가 수정!

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JAVASCRIPT</a></li>
       </ol>
+      <p>hello world!</p>
       <!-- <ul>
         <li>kim</li>
         <li>jin</li>
