--- a/1.html
+++ b/1.html
@@ -4,7 +4,6 @@
       <title>WEB1-HTML</title>
       <meta charset="utf-8">
     </head>
-
     <body>
       <h1><a href="index.html">WEB1</a></h1>
       <ol>
@@ -21,6 +20,10 @@
       <p><strong>ul태그</strong>는 unordered list의 약자로 li태그의 부모태그이고 경계를 짓기위한, 그룹핑을 위한 태그이다.</p>
       <p><strong>li태그</strong>는 리스트의 약자로 목록을 보여주기 위한 태그이다.</p>
       <h2>HTML이란</h2>
+      <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </p>
+      <p>iframe태그는 inline frame의 약자로 웹페이지 안에 또다른 웹페이지를 삽입할때 사용하는 태그이다.</p>
       <p><a href="https://developer.mozilla.org/ko/docs/Web/HTML/Element/a" target="_blank" title="anchor 설명">a태그</a>는 anchor의 약자로 링크를 의미합니다.</p>
       <h3>h1은 제목을 의미한다.</h3>
       <h4>h뒤에 숫자가 클수록 글자 크기는 작아진다.</h4>
@@ -31,5 +34,43 @@
       <p style="margin-top:25px;">p태그에서는 CSS로 표현을 좀 더 자유롭게 사용할 수 있다.</p>
       <img src="coding.jpg" width="25%">
       <p>img태크는 꼭 속성와 함께 쓰이고 속성 중 src속성에는 자신이 넣고자 하는 이미지 이름을 입력해야된다. 그리고 두번째 속성에서 이미지의 크기를 조절하는 속성은 width속성이다.</p>
+      <p>밑에 댓글추가기능은 disqus에서 copy해온 코드로 만든것이다.</p>
+      <p>
+        <div id="disqus_thread"></div>
+          <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://web1-iavciyihjn.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+          </script>
+          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+      </p>
+      <p>밑에 코드는 tawk에서 실시간 채팅기능을 추가한 코드이다. 너무너무 신기하고 재미있다.</p>
+      <p>
+        <!--Start of Tawk.to Script-->
+        <script type="text/javascript">
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/62356e321ffac05b1d7f5565/1fugbcud7';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+        })();
+        </script>
+        <!--End of Tawk.to Script-->
+      </p>
     </body>
 </html>
