--- a/2.html
+++ b/2.html
@@ -4,6 +4,12 @@
       <title>WEB1-CSS</title>
       <meta charset="utf-8">
       <style>
+        #active {
+          color:red;
+        }
+        .saw {
+          color:gray;
+        }
         a {
           color:black;
           text-decoration:none;
@@ -12,14 +18,15 @@
           font-size: 50px;
           text-align: center;
         }
+
       </style>
     </head>
 
     <body>
       <h1><a href="index.html">WEB1</a></h1>
       <ol>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html" style="color:red;text-decoration:underline">CSS</a></li>
+        <li><a href="1.html" class="saw">HTML</a></li>
+        <li><a href="2.html" class="saw" id="active">CSS</a></li>
         <li><a href="3.html">JAVASCRIPT</a></li>
       </ol>
 
@@ -30,7 +37,7 @@
         <li><a href="3.html"><font color="red">JAVASCRIPT</font></a></li>
       </ol> -->
 
-      <h2><font color = "red">CSS이란</font></h2>
+      <h2>CSS이란</font></h2>
       <p><a href="https://developer.mozilla.org/ko/docs/Web/HTML/Element/a" target="_blank" title="anchor 설명">a태그</a>는 anchor의 약자로 링크를 의미합니다.</p>
       <h3>h1은 제목을 의미한다.</h3>
       <h4>h뒤에 숫자가 클수록 글자 크기는 작아진다.</h4>
