--- a/2.html
+++ b/2.html
@@ -4,6 +4,9 @@
       <title>WEB1-CSS</title>
       <meta charset="utf-8">
       <style>
+      body{
+        margin:0;
+      }
         #active {
           color:red;
         }
@@ -17,8 +20,16 @@
         h1 {
           font-size: 50px;
           text-align: center;
+          border-bottom: 1px solid gray;
+          margin:0;
+          padding:20px;
         }
-
+        ol{
+          border-right:1px solid gray;
+          width:100px;
+          margin:0;
+          padding:20px;
+        }
       </style>
     </head>
 
