--- a/2.html
+++ b/2.html
@@ -35,6 +35,20 @@
           padding:25px;
           padding-top: 5px;
         }
+        @media(max-width:450px) {
+          #grid {
+            display:block;
+          }
+          ol{
+            border-right:none;
+          }
+          h1 {
+            border-bottom:none;
+          }
+          #article img{
+            width:0;
+          }
+        }
       </style>
     </head>
 
