link태그, 중복css제거
각각의 html에 저장되어 있는 css를 하나의 css페이지에 저장을 한 다음 각각의 html에 있던 css에다가 원래 거기에 css가 있었다고 알려주는 link태그를 넣어줌으로써 중복을 제거해주고 편리성을 더 높여준다.
코딩을 잘하는 방법은 중복을 제거하는 것부터 시작된다!

--- a/1.html
+++ b/1.html
@@ -3,19 +3,17 @@
   <head>
       <title>WEB1-HTML</title>
       <meta charset="utf-8">
+      <link rel="stylesheet" href="style.css">
     </head>
     <body>
       <h1><a href="index.html">WEB1</a></h1>
+      <div id="grid">
       <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JAVASCRIPT</a></li>
       </ol>
-      <ul>
-        <li>kim</li>
-        <li>jin</li>
-        <li>jung</li>
-      </ul>
+      <div id="article">
       <p><strong>ol태그</strong>는 ordered list의 약자로 숫자가 자동으로 넘버링 되게 하는 태그이다.</p>
       <p><strong>ul태그</strong>는 unordered list의 약자로 li태그의 부모태그이고 경계를 짓기위한, 그룹핑을 위한 태그이다.</p>
       <p><strong>li태그</strong>는 리스트의 약자로 목록을 보여주기 위한 태그이다.</p>
@@ -72,5 +70,7 @@
         </script>
         <!--End of Tawk.to Script-->
       </p>
+    </div>
+  </div>
     </body>
 </html>
