--- a/3.html
+++ b/3.html
@@ -3,16 +3,17 @@
   <head>
       <title>WEB1-JAVASCRIPT</title>
       <meta charset="utf-8">
+      <link rel="stylesheet" href="style.css">
     </head>
-
     <body>
       <h1><a href="index.html">WEB1</a></h1>
+      <div id="grid">
       <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JAVASCRIPT</a></li>
       </ol>
-
+      <div id="article">
       <p><strong>ol태그</strong>는 ordered list의 약자로 숫자가 자동으로 넘버링 되게 하는 태그이다.</p>
       <p><strong>ul태그</strong>는 unordered list의 약자로 li태그의 부모태그이고 경계를 짓기위한, 그룹핑을 위한 태그이다.</p>
       <p><strong>li태그</strong>는 리스트의 약자로 목록을 보여주기 위한 태그이다.</p>
@@ -27,5 +28,7 @@
       <p style="margin-top:25px;">p태그에서는 CSS로 표현을 좀 더 자유롭게 사용할 수 있다.</p>
       <img src="coding.jpg" width="25%">
       <p>img태크는 꼭 속성와 함께 쓰이고 속성 중 src속성에는 자신이 넣고자 하는 이미지 이름을 입력해야된다. 그리고 두번째 속성에서 이미지의 크기를 조절하는 속성은 width속성이다.</p>
+    </div>
+  </div>
     </body>
 </html>
