javascript에 대한 실습
js에 대해 예시를 만들어보고 내가 만든 html에 적용하여 실습해보았다.
html에게 지금부터 js가 시작된다는 것을 알려주는 태그 <script></script>
경고창 속성 = onclick="alert('hi')";
웹브라우저 위에서 일어나는 여러가지 사건들 중에 기념할만한, 사용자들에게 유용할만한 것들을 event처리라고 한다.

--- a/ex3.html
+++ b/ex3.html
@@ -6,15 +6,7 @@
       <link rel="stylesheet" href="style.css">
     </head>
     <body>
-      <input type="button" value="night" onclick=
-      "document.querySelector('body').style.backgroundColor = 'black';
-      document.querySelector('body').style.color = 'white';
-      ">
-      <input type="button" value="day" onclick=
-      "document.querySelector('body').style.backgroundColor = 'white';
-      document.querySelector('body').style.color = 'black';
-      ">
-      <h1><a href="index.html" style="color:blue">WEB1</a></h1>
+      <h1><a href="index.html">WEB1</a></h1>
       <div id="grid">
       <ol>
         <li><a href="1.html">HTML</a></li>
@@ -25,7 +17,7 @@
       <p><strong>ol태그</strong>는 ordered list의 약자로 숫자가 자동으로 넘버링 되게 하는 태그이다.</p>
       <p><strong>ul태그</strong>는 unordered list의 약자로 li태그의 부모태그이고 경계를 짓기위한, 그룹핑을 위한 태그이다.</p>
       <p><strong>li태그</strong>는 리스트의 약자로 목록을 보여주기 위한 태그이다.</p>
-      <h2>JAVASCRIPT이란</h2>
+      <h2 style="background-color: yellow; color:blue; border:5px solid red">JAVASCRIPT이란</h2>
       <p><a href="https://developer.mozilla.org/ko/docs/Web/HTML/Element/a" target="_blank" title="anchor 설명">a태그</a>는 anchor의 약자로 링크를 의미합니다.</p>
       <h3>h1은 제목을 의미한다.</h3>
       <h4>h뒤에 숫자가 클수록 글자 크기는 작아진다.</h4>
