--- a/3.html
+++ b/3.html
@@ -4,6 +4,30 @@
       <title>WEB1-JAVASCRIPT</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="style.css">
+      <script>
+        function nightDayHandler(self) {
+            var target = document.querySelector('body');
+            if(self.value === 'night') {
+              target.style.backgroundColor = 'black';
+              target.style.color = 'white';
+              self.value = 'day';
+
+              var alist = document.querySelectorAll('a');
+              for(var i = 0; i < alist.length; i++) {
+                alist[i].style.color = 'powderblue';
+              }
+            }else {
+              target.style.backgroundColor = 'white';
+              target.style.color = 'black';
+              self.value = 'night'
+
+              var alist = document.querySelectorAll('a');
+              for(var i = 0; i < alist.length; i++) {
+                alist[i].style.color = 'blue';
+              }
+            }
+          }
+      </script>
     </head>
     <body>
       <!-- <input type="button" value="night" onclick=
@@ -15,18 +39,14 @@
       document.querySelector('body').style.color = 'black';
       "> === -->
       <input type="button" value="night" onclick="
-      var target = document.querySelector('body');
-      if(this.value === 'night') {
-        target.style.backgroundColor = 'black';
-        target.style.color = 'white';
-        this.value = 'day';
-      }else {
-        target.style.backgroundColor = 'white';
-        target.style.color = 'black';
-        this.value = 'night'
-      }
+      nightDayHandler(this);
       ">
-      <h1><a href="index.html" style="color:blue">WEB1</a></h1>
+
+      <input type="button" value="night" onclick="
+      nightDayHandler(this);
+      ">
+
+      <h1><a href="index.html">WEB1</a></h1>
       <div id="grid">
       <ol>
         <li><a href="1.html">HTML</a></li>
