--- a/3.html
+++ b/3.html
@@ -5,26 +5,38 @@
       <meta charset="utf-8">
       <link rel="stylesheet" href="style.css">
       <script>
+        var Links = {
+          setColor:function(color) {
+            var alist = document.querySelectorAll('a');
+            for(var i = 0; i < alist.length; i++) {
+              alist[i].style.color = color;
+            }
+          }
+        }
+
+        var Body = {
+          setColor:function(color) {
+            document.querySelector('body').style.color = color;
+          },
+          BackSetColor:function (color) {
+            document.querySelector('body').style.backgroundColor = color;
+          }
+        }
+
         function nightDayHandler(self) {
             var target = document.querySelector('body');
             if(self.value === 'night') {
-              target.style.backgroundColor = 'black';
-              target.style.color = 'white';
+              Body.BackSetColor('black');
+              Body.setColor('white');
               self.value = 'day';
 
-              var alist = document.querySelectorAll('a');
-              for(var i = 0; i < alist.length; i++) {
-                alist[i].style.color = 'powderblue';
-              }
+              Links.setColor('powderblue');
             }else {
-              target.style.backgroundColor = 'white';
-              target.style.color = 'black';
+              Body.BackSetColor('white');
+              Body.setColor('black');
               self.value = 'night'
 
-              var alist = document.querySelectorAll('a');
-              for(var i = 0; i < alist.length; i++) {
-                alist[i].style.color = 'blue';
-              }
+              Links.setColor('blue');
             }
           }
       </script>
@@ -38,10 +50,6 @@
       "document.querySelector('body').style.backgroundColor = 'white';
       document.querySelector('body').style.color = 'black';
       "> === -->
-      <input type="button" value="night" onclick="
-      nightDayHandler(this);
-      ">
-
       <input type="button" value="night" onclick="
       nightDayHandler(this);
       ">
