--- a/2.html
+++ b/2.html
@@ -4,9 +4,14 @@
       <title>WEB1-CSS</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="style.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+      <script src='colors.js'></script>
     </head>
 
     <body>
+      <input type="button" value="night" onclick="
+      nightDayHandler(this);
+      ">
       <h1><a href="index.html">WEB1</a></h1>
       <div id="grid">
           <ol>
