--- a/3.html
+++ b/3.html
@@ -4,42 +4,8 @@
       <title>WEB1-JAVASCRIPT</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="style.css">
-      <script>
-        var Links = {
-          setColor:function(color) {
-            var alist = document.querySelectorAll('a');
-            for(var i = 0; i < alist.length; i++) {
-              alist[i].style.color = color;
-            }
-          }
-        }
-
-        var Body = {
-          setColor:function(color) {
-            document.querySelector('body').style.color = color;
-          },
-          BackSetColor:function (color) {
-            document.querySelector('body').style.backgroundColor = color;
-          }
-        }
-
-        function nightDayHandler(self) {
-            var target = document.querySelector('body');
-            if(self.value === 'night') {
-              Body.BackSetColor('black');
-              Body.setColor('white');
-              self.value = 'day';
-
-              Links.setColor('powderblue');
-            }else {
-              Body.BackSetColor('white');
-              Body.setColor('black');
-              self.value = 'night'
-
-              Links.setColor('blue');
-            }
-          }
-      </script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+      <script src='colors.js'></script>
     </head>
     <body>
       <!-- <input type="button" value="night" onclick=
