--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
       <title>WEB1-HTML</title>
       <meta charset="utf-8">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+      <script src='colors.js'></script>
     </head>
 
     <body>
+      <input type="button" value="night" onclick="
+      nightDayHandler(this);
+      ">
       <h1><a href="index.html">WEB1</a></h1>
       <ol>
         <li><a href="1.html">HTML</a></li>
